--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,5 +17,30 @@
         android:id="@+id/mLocationBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="申请定位权限" />
+        android:text="定位权限" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="存储"
+        android:layout_marginTop="16dp"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />
+
+    <Button
+        android:id="@+id/mStorageBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="存储" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="电话"
+        android:layout_marginTop="16dp"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />
+
+    <Button
+        android:id="@+id/mPhoneBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="电话" />
 </androidx.appcompat.widget.LinearLayoutCompat>
